fix font size on mobile

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -81,6 +81,11 @@ html { scroll-behavior: smooth; }
 
 body { font-size: 1.125rem; /* 1 rem = 16px, 1.125rem = 18px */ }
 
+@media (max-width: 425px) {
+    body { font-size: 1rem; }
+}
+
+
 h1 { font-size: 2.25rem; }
 
 form {
